<resources>
    <string name="app_name">CardHolder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_card_icon">Add card icon</string>
    <string name="name">Name</string>
    <string name="card_number">Card number</string>
    <string name="scanner">Scanner</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme</string>
    <string name="card_name">Card Name</string>
</resources>
